<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_message"
        android:layout_marginTop="113dp"
        android:id="@+id/textViewActFirst"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/editTextActFirst"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/button"
        android:layout_marginBottom="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textViewActFirst"
        android:onClick="firstButtonClick"/>


</RelativeLayout>